--- a/FP_5_StatProb_B.ipynb
+++ b/FP_5_StatProb_B.ipynb
@@ -3137,6 +3137,12 @@
       "cell_type": "markdown",
       "source": [
         "## 2. Statistik Deskriptif"
+        "\n",
+    "Statistik deskriptif ada 2, untuk melihat pemusatan data dan penyebaran data.\n",
+    "* **Pemusatan data**: Mean, median, modus\n",
+    "* **Penyebaran data**: Varian, standar deviasi\n",
+    "\n",
+    "Kita bisa menggunakan fungsi yang telah disediakan Pandas yaitu **describe()** untuk mendapatkan nilai mean, std, max, min, dan kuartil secara cepat."
       ],
       "metadata": {
         "id": "RhDOyGwuMAnJ"
